# strawberry-farm

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt  run.py  setup.bat
.agent/workflows/: deploy_gos.md
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: dashboard.js  llm_assistant.js
documentation/: bench_testing.md  commercial_pitch_deck.md  hardware_protocol.md  hardware_specs.md  interview_prep_script.md  interview_prep_script_clean.md  nrf52840_pinout.md  pcb_design_prompts.md  pcb_design_specification.md  pcb_layout_checklist.md  raspberry_pi_setup.md  requirements.md  system_verification_report.md  technical_presentation.md
firmware/: CMakeLists.txt  prj.conf
firmware/boards/: nrf52840_phytotron.overlay
firmware/drivers/: led_control.c
firmware/include/: muise_epistemic.h  muise_mesh.h  pahlevani_filters.h  pahlevani_power.h  power_mgmt.h  protocol.h  sensor_sim.h
firmware/src/: main.c
gateway/: Dockerfile  requirements.txt  schema.sql
gateway/services/: api.py  farm_sim.py  met_station.py  mqtt_bridge.py  mqtt_sn_bridge.py  otbr_gateway.py  safety_ltl.py  sync.py
mechanical/: enclosure_gen.scad
ml_engine/: Dockerfile  agent_rl.py  domain.pddl  macq_learner.py  phenotyping.py  plant_sim_c3.py  requirements.txt  spectral_opt.py
pcbs/gos_sensor_node/: MCU.kicad_sch  connectors.kicad_sch  gos_sensor_node.kicad_prl  gos_sensor_node.kicad_pro  gos_sensor_node.kicad_sch  leds.kicad_sch  power.kicad_sch  power.kicad_sch-bak  radio.kicad_sch  sensors.kicad_sch  ~MCU.kicad_sch.lck
(+2 files in other folders)
